--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -19,16 +19,14 @@ video {
 }
 
 .hero-container > h1 {
-  color: rgb(241, 148, 9);
+  color: #fff;
   font-size: 100px;
   margin-top: -100px;
 }
 
 .hero-container > p {
   margin-top: 8px;
-  color: black;
-  text-shadow: 2px 2px gray
-  ;
+  color: #fff;
   font-size: 32px;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
     'Lucida Sans', Arial, sans-serif;
