--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.0rem;
+  font-size: 1.2rem;
   position: sticky;
   top: 0;
   z-index: 999;
@@ -19,12 +19,12 @@
 }
 
 .navbar-logo {
-  color: rgb(199, 5, 5);
+  color: #fff;
   justify-self: start;
   margin-left: 20px;
   cursor: pointer;
   text-decoration: none;
-  font-size: 1.5rem;
+  font-size: 2rem;
   display: flex;
   align-items: center;
 }
@@ -50,7 +50,7 @@
 }
 
 .nav-links {
-  color: rgb(14, 223, 94);
+  color: #fff;
   display: flex;
   align-items: center;
   text-decoration: none;
