--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -19,17 +19,18 @@ video {
 }
 
 .hero-container > h1 {
-  color: #fff;
+  color: rgb(241, 94, 9);
   font-size: 100px;
   margin-top: -100px;
 }
 
 .hero-container > p {
   margin-top: 8px;
-  color: #fff;
+  color: rgb(17, 17, 17);
   font-size: 32px;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
     'Lucida Sans', Arial, sans-serif;
+    text-shadow: 2px 2px gray;
 }
 
 .hero-btns {
